feat: Enable native access for server runtime